Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjNumObjField.quorum
class Main
    Number v
    v:SetValue(5.0)
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
